@@ -1,7 +1,7 @@
 Package: phuse
 Type: Package
 Title: Web Application Framework for Phuse Scripts
-Version: 0.1.3
+Version: 0.1.4
 Author: Hanming Tu [aut, cre]
 Authors@R: c(
   person("Hanming", "Tu", email = "hanming.tu@gmail.com",role = c("aut", "cre"))
