@@ -19,15 +19,12 @@ export(read_yml)
 export(resolve)
 export(run_example)
 export(start_phuse)
-export(test_init)
 importFrom(RCurl,url.exists)
 importFrom(git2r,clone)
 importFrom(git2r,init)
 importFrom(git2r,is_empty)
 importFrom(stats,setNames)
 importFrom(utils,download.file)
-importFrom(utils,install.packages)
-importFrom(utils,installed.packages)
 importFrom(utils,read.csv)
 importFrom(utils,str)
 importFrom(utils,url.show)
