@@ -10,7 +10,7 @@
 #' @examples
 #'   fns <- c("dm.xpt","ex.xpt")
 #'   dir <- "/Users/htu/myRepo/data"
-#'   a <- download_script_files(fns, dir)
+#'   # a <- download_script_files(fns, dir)
 #' @author Hanming Tu
 #' @name download_script_files
 # ---------------------------------------------------------------------------
