@@ -24,7 +24,7 @@ download files defined in the input list from a repository.
 \examples{
   fns <- c("dm.xpt","ex.xpt")
   dir <- "/Users/htu/myRepo/data"
-  a <- download_script_files(fns, dir)
+  # a <- download_script_files(fns, dir)
 }
 \author{
 Hanming Tu
