@@ -25,7 +25,8 @@ compare two lists using the first list as a base;
   b <- "development/R/scripts"
   c <- "Draw_Dist_R.yml"
   f1 <- paste(a,b,c, sep = '/')
-  f2 <- "/Users/htu/myRepo/scripts/Draw_Dist_R.yml"
+  dr <- resolve(system.file("examples", package = "phuse"), "02_display")
+  f2 <- paste(dr, "www", "Draw_Dist_R.yml", sep = '/')
   r1 <- read_yml(f1)
   r2 <- read_yml(f2)
   r3 <- merge_lists(r1, r2)
