@@ -1,11 +1,0 @@
-% Generated by roxygen2: do not edit by hand
-% Please edit documentation in R/test_init.R
-\name{test_init}
-\alias{test_init}
-\title{Test init file}
-\usage{
-test_init()
-}
-\description{
-Test the init_cfg
-}
